--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:label="app"
+        android:label="Society Automation"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -31,5 +31,4 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-    <application android:usesCleartextTraffic="true"/>
 </manifest>
